@@ -47,11 +47,24 @@ extern "C" {
  * Inflates either zlib or gzip deflated memory. The inflated memory is
  * expected to be freed by the caller.
  *
+ * It will allocate 256k for the destination buffer. If it is not enought it will multiply the previous buffer size per 2, until there is enough memory.
  * @returns the length of the deflated buffer
  *
  @since v0.8.1
  */
 int ccInflateMemory(unsigned char *in, unsigned int inLength, unsigned char **out);
+
+/** 
+ * Inflates either zlib or gzip deflated memory. The inflated memory is
+ * expected to be freed by the caller.
+ *
+ * outLenghtHint is assumed to be the needed room to allocate the inflated buffer.
+ *
+ * @returns the length of the deflated buffer
+ *
+ @since v1.0.0
+ */
+int ccInflateMemoryWithHint(unsigned char *in, unsigned int inLength, unsigned char **out, unsigned int outLenghtHint );
 
 	
 /** inflates a GZip file into memory
